[package]
name = "rftps"
version = "0.3.3"
package-mode = false

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
libunftp = "0.20.3"
unftp-sbe-fs = "0.2.6"
rand = "0.9.0"
async-trait = "0.1.50"

[features]
include_pem_files = []

[dev-dependencies]
tempfile = "3.17.1"
