[package]
name = "rftps"
version = "0.3.8"
edition="2024"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
libunftp = "0.21.0"
unftp-sbe-fs = "0.3.0"
rand = "0.9.0"
async-trait = "0.1.50"

[features]
include_pem_files = []

[dev-dependencies]
tempfile = "3.17.1"

# Build optimization for smaller binaries
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Remove debug symbols